# snippets_of_code

./: LICENSE  README.md
cicd/: README.md
cicd/github_cloudbuild/: cloudbuild_pr.yaml  cloudbuild_tag.yaml
commit_hooks/: commit-msg  invalid_message  valid_message
decorators/: main.py  utils.py
minimal_python_package/: setup.py
minimal_python_package/poetry_package/: README.md  pyproject.toml
minimal_python_package/poetry_package/src/dummypackage/: add_stuff.py
test_driven_development/: main.py  task.md  test_string_calculator.py
tests/: airflow.py  conftest.py  dummy_mock.py  main.py  test.py  tests_session2.py
